--- a/Assignement1/index.html
+++ b/Assignement1/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Responsive Page</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <h1>Our Menu</h1>
+  <div class="section chicken">
+    <div class="title">Chicken</div>
+    <p>Lorem ipsum dolor sit amet.</p>
+  </div>
+  <div class="section beef">
+    <div class="title">Beef</div>
+    <p>Lorem ipsum dolor sit amet.</p>
+  </div>
+  <div class="section sushi">
+    <div class="title">Sushi</div>
+    <p>Lorem ipsum dolor sit amet.</p>
+  </div>
+</body>
+</html>
 
