--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
   <h1>Our Menu</h1>
-  <div class="section chicken">
-    <div class="title">Chicken</div>
+  <div class="section Mohammad">
+    <div class="title">Mohammad</div>
     <p>Lorem ipsum dolor sit amet.</p>
   </div>
-  <div class="section beef">
-    <div class="title">Beef</div>
+  <div class="section Khaled">
+    <div class="title">Khaled</div>
     <p>Lorem ipsum dolor sit amet.</p>
   </div>
-  <div class="section sushi">
-    <div class="title">Sushi</div>
+  <div class="section Sawalqa">
+    <div class="title">Sawalqa</div>
     <p>Lorem ipsum dolor sit amet.</p>
   </div>
 </body>
