--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Page</title>
+  <title>Assignment</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <h1>Our Menu</h1>
   <div class="section Mohammad">
     <div class="title">Mohammad</div>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <p>My First Name *Not Open For Choice*.</p>
   </div>
   <div class="section Khaled">
     <div class="title">Khaled</div>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <p>My Father's Name *Also Not Open For Choice*</p>
   </div>
   <div class="section Sawalqa">
     <div class="title">Sawalqa</div>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <p>My Family Name *idc anymore ...*</p>
   </div>
 </body>
 </html>
